# ebatrade

./: .env.example  .gitignore  CLAUDE.md  README.md  dashboard.html  pyproject.toml  st4_report.html
docs/: TZ_pairs_trading_bot.md  TZ_phase1_signal_advisor.md  РАСЧЕТЫ.md
docs/plans/: cheeky-riding-melody.md  glimmering-tinkering-flute.md  st2-buzzing-marshmallow.md
infra/: ebatrade.service  nginx-trade.bananagen.ru.conf
pairsignal/: README.md  __init__.py  api.py  compare_strategies.py  config.py  data_feed.py  engine.py  indicators.py  main.py  models.py  momentum.py  pairs_coint.py  requirements.txt  scan_year.py  strategy.py  tg_summary.py  virtual_exchange.py
pairsignal/research/crypto/: load_data.py  run_experiments.py  stress_csmom.py  wf_engine.py
pairsignal/research/forts/: README.md  bt.py  final_oos.py  fixed_test.py  load_data.py  screen.py  strategies.py  validate3.py  (+2 more)
pairsignal/st4/: backtest.py  config.py  data_feed.py  engine.py  execution.py  indicators.py  models.py  risk.py  scan_pairs.py  service.py  strategy.py  tbank_sandbox.py  tinkoff_executor.py
pairsignal/st5/: backtest.py  config.py  data_feed.py  engine.py  indicators.py  models.py  service.py  snapshot.py  strategy.py  tinkoff_executor.py
pairsignal/st6/: backtest.py  config.py  core.py  data_feed.py  models.py  service.py  snapshot.py  tinkoff_executor.py
st6/: README_st6.md  st6_backtest.py  st6_bot.py  test_st6.py
tests/: test_momentum.py  test_momentum_api.py  test_momentum_live.py  test_pairs_coint.py  test_pairsignal.py  test_st4.py  test_st5.py  test_st6.py
(+28 files in other folders)
